# mogilev-lunch-menu

./: .gitignore  README.md  lunch.py  pyproject.toml
config/: __init__.py  config.yaml  dbinit.py  settings.py
restaurants/: __init__.py  db.py  handler.py  kinza.py  materik.py  models.py  pizzaroni.py  schedule.py  vangog.py
util/: __init__.py  common.py  constants.py  db.py  decorators.py  handlers.py  keyboards.py  models.py
